k8s-vendure/vendure-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vendure-shop
spec:
  selector:
    matchLabels:
      app: vendure-shop
  replicas: 1
  template:
    metadata:
      labels:
        app: vendure-shop
      namespace: vendure-showcase
    spec:
      containers:
        - name: server
          image: 975050322104.dkr.ecr.eu-west-2.amazonaws.com/vendure-showcase:latest
          imagePullPolicy: 
          resources:
            requests:
              cpu: "1000m"
            limits:
              cpu: "1"
          command:
            - node
          args:
            - "dist/index.js"
          ports:
            - containerPort: 3000
        - name: worker
          image: 975050322104.dkr.ecr.eu-west-2.amazonaws.com/vendure-showcase:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "1000m"
            limits:
              cpu: "1"
          command:
            - node
          args:
            - "dist/index-worker.js"
---
kind: Service
apiVersion: v1
metadata:
  name: vendure-shop
spec:
  selector:
    app: vendure-shop
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":3000}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: api.linasm.click
    kubernetes.io/ingress.class: alb
  generation: 1
  name: vendure-api
spec:
  ingressClassName: alb
  rules:
  - host: api.linasm.click
    http:
      paths:
      - backend:
          service:
            name: vendure-shop
            port:
              number: 3000
        pathType: ImplementationSpecific
